fix: add spacing on the right of the donate button when there's no account

--- a/web/src/components/donate-button/donate-button.css
+++ b/web/src/components/donate-button/donate-button.css
@@ -14,7 +14,10 @@
         @media (--lg-down) {
             display: flex;
         }
+    }
 
+    &.apply-right-margin {
+        margin-inline-end: 16px;
     }
 
     svg {
